--- a/Views/SpaceMissions/Apollo.cshtml
+++ b/Views/SpaceMissions/Apollo.cshtml
@@ -166,7 +166,7 @@
     <p>
         @Localizer["Apollo was"]
     </p>
-    <a href="https://www.hq.nasa.gov/office/pao/History/SP-4009/v4p1a.htm" target="_blank">@Localizer["View the Apollo Spacecraft Reference book"]</a>
+    <a href="https://www.nasa.gov/wp-content/uploads/static/history/afj/pdf/apollo-csm-news-reference-1968.pdf?emrc=67fed29c37480" target="_blank">@Localizer["View the Apollo Spacecraft Reference book"]</a>
 </div>
 
 <div class="crew-section">
@@ -232,7 +232,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="crew-info">
-                                <h3>Buzz Aldrin</h3>
+                                <h3>Michael Collins</h3>
                                 <p>@Localizer["Command module pilot"]</p>
                                 <p>@Localizer["Apollo 11 Mission pilot"]</p>
                                 <p>
