Add Experiments Views and lenguage resources

--- a/Views/Experiments/ManageExperiments.cshtml
+++ b/Views/Experiments/ManageExperiments.cshtml
@@ -256,7 +256,7 @@
                         <div class="col-md-12">
                             <div class="project-info">
                                 <div class="project-info-item"><img class="image-item" src="~/images/calendar.png" alt="Calendar" width="15" /> 12/07/1972</div>
-                                <div class="project-info-item"><img src="~/images/label.png" alt="Type" width="15" />@Localizer["Lunar"]</div>
+                                <div class="project-info-item"><img src="~/images/label.png" alt="Type" width="15" />@Localizer["Mars"]</div>
                                 <div class="project-info-item"><i class="fas bi-person-circle"></i>@Localizer["Coordinator"]</div>
                             </div>
                         </div>
@@ -265,7 +265,7 @@
                     <div class="content-row">
                         <div class="col-md-4 content-section">
                             <h6>@Localizer["Description"]</h6>
-                            <div class="description-box">@Localizer["Description1"]</div>
+                            <div class="description-box">@Localizer["Description"]</div>
                         </div>
 
                         <div class="col-md-4 content-section">
@@ -323,7 +323,7 @@
                         <div class="col-md-12">
                             <div class="project-info">
                                 <div class="project-info-item"><img src="~/images/calendar.png" alt="Calendar" width="15" /> 04/12/1961</div>
-                                <div class="project-info-item"><img src="~/images/label.png" alt="Type" width="15" />@Localizer["Lunar"]</div>
+                                <div class="project-info-item"><img src="~/images/label.png" alt="Type" width="15" />@Localizer["Mars"]</div>
                                 <div class="project-info-item"><i class="fas bi-person-circle"></i>@Localizer["Coordinator"]</div>
                             </div>
                         </div>
@@ -332,7 +332,7 @@
                     <div class="content-row">
                         <div class="col-md-4 content-section">
                             <h6>@Localizer["Description"]</h6>
-                            <div class="description-box">@Localizer["Description2"]</div>
+                            <div class="description-box">@Localizer["Description"]</div>
                         </div>
 
                         <div class="col-md-4 content-section">
