--- a/Views/Experiments/SelectedExperimentMoonwalks.cshtml
+++ b/Views/Experiments/SelectedExperimentMoonwalks.cshtml
@@ -291,13 +291,13 @@
                     <div class="row">
                         <div class="col-md-3 d-flex align-items-center justify-content-center flex-column">
                             <img src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/M897a6a34d05569d726a633431664674a1742626166636" class="project-logo" alt="Project Apollo">
-                            <span class="project-title">@Localizer["SimulatingLifeOnMars"]</span>
+                            <span class="project-title">@Localizer["Moonwalks"]</span>
                         </div>
 
                         <div class="col-md-9">
                             <div class="mb-2 d-flex">
                                 <div class="project-info-item "><img src="~/images/calendar.png" alt="Calendar" width="15" /> 12/07/1972</div>
-                                <div class="project-info-item"><img src="~/images/label.png" alt="Type" width="15" />@Localizer["Lunar"]</div>
+                                <div class="project-info-item"><img src="~/images/label.png" alt="Type" width="15" />@Localizer["Mars"]</div>
                                 <div class="project-info-item"><i class="fas bi-person-circle"></i>@Localizer["Coordinator"]</div>
                             </div>
                             <div class="description-box mb-3" style="height: 120px;">
