--- a/Views/Experiments/SimulatingLifeOnMars.cshtml
+++ b/Views/Experiments/SimulatingLifeOnMars.cshtml
@@ -126,7 +126,7 @@
     <!-- Second row - Resources used, Results and publication -->
     <div class="row g-4 justify-center">
         <div class="col-md-4 last-row-item">
-            <div class="module-card" onclick="viewMission('ResourcesUsed')">
+            <div class="module-card" onclick="viewMission('ResourceUsed')">
                 <img src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/M54a5e56c09cf3fb44507c5b2fdb63a791743121829679" class="module-image" alt="Resources used">
                 <div class="module-title-container">
                     <h3 class="module-title">@Localizer["Resources used"]</h3>
