Add Research Programs Views and resources

--- a/Views/ResearchPrograms/InvestigatorsInCharge.cshtml
+++ b/Views/ResearchPrograms/InvestigatorsInCharge.cshtml
@@ -70,28 +70,28 @@
 
 <div class="container">
     <h1 class="page-title">@Localizer["Investigators in charge"]</h1>
-
-    <button class="back-button" onclick="window.location.href='/Experiments/SimulatingLifeOnMars'">
+    
+    <button class="back-button" onclick="window.location.href='/ResearchPrograms/SpaceX'">
         @Localizer["Back"]
     </button>
 
     <div class="card-container">
-        <img src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/M1cb447d5c29976ad55ce737ac061e6711742637697170" class="investigator-img" alt="Stephanie Wilson  ">
+        <img src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/M8adaa27fa1e2a04b96b268eccbb0acfd1743112966286" class="investigator-img" alt="Elon Musk">
 
         <div class="investigator-info">
             <div class="info-row">
                 <div class="info-label">@Localizer["Name:"]</div>
-                <div class="info-value">Dr. Stephanie Wilson  </div>
+                <div class="info-value">Elonk Reeve Musk</div>
             </div>
 
             <div class="info-row">
                 <div class="info-label">@Localizer["Afiliation:"]</div>
-                <div class="info-value">@Localizer["NASA Johnson Space Center"]</div>
+                <div class="info-value">SpaceX</div>
             </div>
 
             <div class="info-row">
                 <div class="info-label">@Localizer["Specialization:"]</div>
-                <div class="info-value">@Localizer["Space habitat engineering"]</div>
+                <div class="info-value">@Localizer["Aerospace Engineering"]</div>
             </div>
         </div>
     </div>
@@ -100,20 +100,20 @@
         <div class="investigator-info">
             <div class="info-row">
                 <div class="info-label">@Localizer["Name:"]</div>
-                <div class="info-value">Dr. Jeffrey A. Hoffman</div>
+                <div class="info-value">Kathy Lueders</div>
             </div>
 
             <div class="info-row">
                 <div class="info-label">@Localizer["Afiliation:"]</div>
-                <div class="info-value">@Localizer["NASA Kennedy Space Center"]</div>
+                <div class="info-value">NASA</div>
             </div>
 
             <div class="info-row">
                 <div class="info-label">@Localizer["Specialization:"]</div>
-                <div class="info-value">@Localizer["Agriculture in extreme environments"]</div>
+                <div class="info-value">@Localizer["Space Operations"]</div>
             </div>
         </div>
 
-        <img src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/M36f508cc1ea3f59b1743c1b47c241c461742637700976" class="investigator-img" alt="Kathy Lueders">
+        <img src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/Mc55607096fb7f39ddf04e0f87ed01ad81743113135501" class="investigator-img" alt="Kathy Lueders">
     </div>
 </div>
