--- a/Views/ResearchPrograms/SpaceX.cshtml
+++ b/Views/ResearchPrograms/SpaceX.cshtml
@@ -95,13 +95,13 @@
 </style>
 
 <div class="container mt-5">
-    <h1 class="text-center mb-5">@Localizer["Simulating life on Mars"]</h1>
+    <h1 class="text-center mb-5">@Localizer["SpaceX"]</h1>
     <button class="back-button mb-4" onclick="window.location.href='/ResearchPrograms/ResearchProgram'">
         @Localizer["Back"]
     </button>
     <div class="row g-4 justify-center">
-        <!-- First row - Experiment Information, Investigators in Charge-->
-        <div class="col-md-4">
+        <!-- First row - Program Information, Investigators in Charge-->
+        <div class="col-md-4 last-row-item">
 
             <div class="module-card" onclick="viewMission('ProgramInformation')">
                 <img src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/M5b07cd596d8d0ec94e0e8dca15776d061743121686232" class="module-image" alt="NASA Information">
@@ -112,7 +112,7 @@
             </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 last-row-item">
             <div class="module-card" onclick="viewMission('InvestigatorsInCharge')">
                 <img class="image-nasa" src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/Ma96898ad5ddfb7edc5ce8407f7ab42511743121757481" class="module-image" alt="Helmet">
                 <div class="module-title-container">
@@ -126,7 +126,7 @@
     <!-- Second row - Resources used, Results and publication -->
     <div class="row g-4 justify-center">
         <div class="col-md-4 last-row-item">
-            <div class="module-card" onclick="viewMission('ResourcesUsed')">
+            <div class="module-card" onclick="viewMission('ResourceUsed')">
                 <img src="https://assets.mockflow.com/app/wireframepro/company/C1cfce0309136452fb8bfc82060887827/projects/MQq8G1l5Mrb/images/M54a5e56c09cf3fb44507c5b2fdb63a791743121829679" class="module-image" alt="Resources used">
                 <div class="module-title-container">
                     <h3 class="module-title">@Localizer["Resources used"]</h3>
