--- a/Views/ResearchPrograms/ManageResearchPrograms.cshtml
+++ b/Views/ResearchPrograms/ManageResearchPrograms.cshtml
@@ -265,7 +265,7 @@
                     <div class="content-row">
                         <div class="col-md-4 content-section">
                             <h6>@Localizer["Description"]</h6>
-                            <div class="description-box">@Localizer["Description1"]</div>
+                            <div class="description-box">@Localizer["Description"]</div>
                         </div>
 
                         <div class="col-md-4 content-section">
@@ -332,7 +332,7 @@
                     <div class="content-row">
                         <div class="col-md-4 content-section">
                             <h6>@Localizer["Description"]</h6>
-                            <div class="description-box">@Localizer["Description2"]</div>
+                            <div class="description-box">@Localizer["Description"]</div>
                         </div>
 
                         <div class="col-md-4 content-section">
