Added EmployeeInformation view, model, controlle and resources

--- a/Views/HumanResources/Employees.cshtml
+++ b/Views/HumanResources/Employees.cshtml
@@ -72,8 +72,8 @@
                 <li class="list-group-item">Coordinator</li>
                 <li class="list-group-item">Unfrozen</li>
             <li class="list-group-item">  
-                <a href="@Url.Action("Details", "Employee", new { id = 1 })" target="_blank" title="Ver detalles">  
-                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="Edit" width="24" height="24">
+                <a href="@Url.Action("EmployeeInformation", "HumanResources", new { id = 1 })" target="_blank" title="Ver detalles">
+                    <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png"  alt="Edit" width="24" height="24">
                 </a>
             </li>
                
@@ -85,7 +85,7 @@
                 <li class="list-group-item">Profesional</li>
                 <li class="list-group-item">Unfrozen</li>
                 <li class="list-group-item">
-                <a href="@Url.Action("Details", "Employee", new { id = 2 })" target="_blank" title="Ver detalles">
+                <a href="@Url.Action("EmployeeInformation", "HumanResources", new { id = 2 })" target="_blank" title="Ver detalles">
                     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="Edit" width="24" height="24">
                 </a>
             </li>
@@ -97,7 +97,7 @@
                 <li class="list-group-item">Coordinator</li>
                 <li class="list-group-item">Frozen</li>
                 <li class="list-group-item">
-                <a href="@Url.Action("Details", "Employee", new { id = 3 })" target="_blank" title="Ver detalles">
+                <a href="@Url.Action("EmployeeInformation", "HumanResources", new { id = 3 })" target="_blank" title="Ver detalles">
                     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="Edit" width="24" height="24">
                 </a>
                 </li>
@@ -109,7 +109,7 @@
                 <li class="list-group-item">Human Resources</li>
                 <li class="list-group-item">Unfrozen</li>
                 <li class="list-group-item">
-                <a href="@Url.Action("Details", "Employee", new { id = 4 })" target="_blank" title="Ver detalles">
+                <a href="@Url.Action("EmployeeInformation", "HumanResources", new { id = 4 })" target="_blank" title="Ver detalles">
                     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="Edit" width="24" height="24">
                 </a>
                 </li>
