--- a/Views/HumanResources/Employees.cshtml
+++ b/Views/HumanResources/Employees.cshtml
@@ -33,7 +33,7 @@
             <!-- col 1 -->
 
             <div class="col-md-5 text-start">
-            <button class="btn btn-primary">@Localizer["Add"]</button>
+            <button id="add-button" class="btn btn-primary">@Localizer["Add"]</button>
             </div>
 
 
@@ -71,7 +71,8 @@
                 <li class="list-group-item">+91 98765 43210</li>
                 <li class="list-group-item">Coordinator</li>
                 <li class="list-group-item">Unfrozen</li>
-            <li class="list-group-item">  
+            <li class="list-group-item">
+
                 <a href="@Url.Action("EmployeeInformation", "HumanResources", new { id = 1 })" target="_blank" title="Ver detalles">
                     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png"  alt="Edit" width="24" height="24">
                 </a>
@@ -85,6 +86,7 @@
                 <li class="list-group-item">Profesional</li>
                 <li class="list-group-item">Unfrozen</li>
                 <li class="list-group-item">
+
                 <a href="@Url.Action("EmployeeInformation", "HumanResources", new { id = 2 })" target="_blank" title="Ver detalles">
                     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="Edit" width="24" height="24">
                 </a>
@@ -97,6 +99,7 @@
                 <li class="list-group-item">Coordinator</li>
                 <li class="list-group-item">Frozen</li>
                 <li class="list-group-item">
+
                 <a href="@Url.Action("EmployeeInformation", "HumanResources", new { id = 3 })" target="_blank" title="Ver detalles">
                     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="Edit" width="24" height="24">
                 </a>
@@ -109,6 +112,7 @@
                 <li class="list-group-item">Human Resources</li>
                 <li class="list-group-item">Unfrozen</li>
                 <li class="list-group-item">
+
                 <a href="@Url.Action("EmployeeInformation", "HumanResources", new { id = 4 })" target="_blank" title="Ver detalles">
                     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="Edit" width="24" height="24">
                 </a>
@@ -120,7 +124,17 @@
 
     </div>
 
-
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Acción del botón "Add"
+        const addButton = document.getElementById('add-button');
+        if (addButton) {
+            addButton.addEventListener('click', function () {
+                window.location.href = '@Url.Action("LoginHR", "HumanResources")';
+            });
+        }
+    });
+</script>
 
 
 
