--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-black px-4 py-3">
             <div class="container-fluid">
                 <!-- Logo y Home -->
-                <a class="navbar-brand d-flex align-items-center" asp-area="" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand d-flex align-items-center" href="/Dashboard/Modules">
                     <img src="~/images/nasa-logo.png" alt="NASA" width="50" class="me-2" />
                     <span class="text-white fw-normal">@Localizer["Home"]</span>
                 </a>
