--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,16 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 
-<p>Use this page to detail your site's privacy policy.</p>
+@{
+    ViewData["Title"] = @Localizer["Privacy Policy"];
+}
+
+<h1>@Localizer["MIT License"]</h1>
+
+<p>@Localizer["Copyright (c) 2025"]</p>
+
+<p>@Localizer["LicenseHeader"]</p>
+
+<p>@Localizer["LicenseBody1"]</p>
+
+<p>@Localizer["LicenseBody2"]</p>
